// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`card with isCompact applied  1`] = `
<Component
  innerRef={null}
  isCompact={true}
/>
`;

exports[`card with isHoverable applied  1`] = `
<Component
  innerRef={null}
  isHoverable={true}
/>
`;

exports[`className is added to the root element 1`] = `"extra-class"`;

exports[`renders with PatternFly Core styles 1`] = `
<Component
  innerRef={null}
/>
`;
